--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ bootJar {
 }
 
 bootRun {
-	systemProperties = System.properties
-	jvmArgs=["-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5050"]
+
+	// リモートデバック停止
+
+	// systemProperties = System.properties
+	// jvmArgs=["-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5050"]
 }
