--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,19 +6,26 @@ services:
     working_dir: /app
     ports:
       - 8080:8080
-      - 5050:5050
     tty: true
     volumes:
-      - ./:/app
+      - ./:/app 
     depends_on:
-      - db
+      - db  
 
   db:
-    image: postgres:13.1
-    container_name: db
+    image: postgres:13.1  
+    container_name: db  
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_USER: "postgres"  
+      POSTGRES_PASSWORD: "postgres" 
       POSTGRES_DB: "dev"
     ports:
-      - "5432:5432"
+      - "5432:5432"  
+
+    # ヘルスチェック (いらないかも)
+
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]  
+      interval: 10s  
+      timeout: 5s  
+      retries: 10  
