--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.application.name=springboot-application
-
-spring.datasource.url=jdbc:postgresql://db:5432/dev
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+# このプロパティで開発環境　or 本番環境を切り替える。
+# 詳細のプロパティは別のプロパティファイルで定義
+spring.profiles.active=prod
