--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
 
     # ヘルスチェック (いらないかも)
 
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]  
-      interval: 10s  
-      timeout: 5s  
-      retries: 10  
+    # healthcheck:
+    #   test: ["CMD-SHELL", "pg_isready -U postgres"]  
+    #   interval: 10s  
+    #   timeout: 5s  
+    #   retries: 10  
