--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 # このプロパティで開発環境　or 本番環境を切り替える。
 # 詳細のプロパティは別のプロパティファイルで定義
-spring.profiles.active=prod
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
